@@ -65,6 +65,8 @@ dpkg (1.18.8) UNRELEASED; urgency=medium
       type, new recognized fields to Dpkg::Control::Fields, and new modules
       Dpkg::Control::Tests and Dpkg::Control::Tests::Entry. Also update
       Dpkg::Index to support these.
+    - Fix Dpkg::Deps so that architecture qualifiers only imply one another
+      if they are the same. Closes: #745366, #827628
   * Test suite:
     - Bump perlcritic ValuesAndExpressions::RequireNumberSeparators minimum
       to 99999.
